--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ textarea { overflow: auto; }
 .flexslider ul li img { width: 892px; height: 331px; }
 .flexslider ul li .slide-cnt { width: 412px; position: absolute; top: 38px; right: 74px; }
 .flexslider ul li .slide-cnt h2 { font-size: 42px; font-weight: bold; color: #fff; line-height: 53px;  text-shadow: rgba(0,0,0,0.5) 1px 1px 1px;  padding-bottom: 17px; }
+.flexslider ul li .slide-cnt h3 { font-size: 24px; font-weight: bold; color: #fff; line-height: 33px;  text-shadow: rgba(0,0,0,0.5) 1px 1px 1px;  padding-bottom: 17px; }
 .flexslider ul li .slide-cnt p { color: #1f3e50; line-height: 26px; }
 .flexslider ul li  a.slider-btn { position: absolute; bottom: 0; left: 50%; min-width: 176px; height: 34px; margin-left: -88px; background: #fff; border-radius: 4px 4px 0 0;
 	-moz-border-radius: 4px 4px 0 0; -webkit-border-radius: 4px 4px 0 0; -o-border-radius: 4px 4px 0 0; color: #1e3d51; font-size: 19px; font-weight: bold; text-align: center; line-height: 36px; 
